# funcs

./: .pre-commit-config.yaml  404.html  CHANGELOG.md  LICENSE  README.md  SECURITY.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
changelog/: index.html
changes/: 63.internal.md
code_of_conduct/: index.html
contributing/: index.html
docs/: reference.md
docs/reference/: application.md  callers.md  composition.md  debugging.md  decorators.md  flows.md  functions.md  getters.md  primitives.md  reduction.md  unpacking.md
funcs/: __init__.py  application.py  callers.py  composition.py  debug.py  decorators.py  flow.py  flows.py  funcs.py  functions.py  getters.py  primitives.py  reduction.py  types.py  typing.py  unpacking.py
reference/: index.html
reference/application/: index.html
reference/callers/: index.html
reference/composition/: index.html
reference/debugging/: index.html
reference/decorators/: index.html
reference/flows/: index.html
reference/functions/: index.html
reference/getters/: index.html
reference/primitives/: index.html
reference/reduction/: index.html
reference/unpacking/: index.html
search/: search_index.json
security/: index.html
src/funcs/: __init__.py  application.py  callers.py  composition.py  debugging.py  decorators.py  flows.py  functions.py  getters.py  primitives.py  reduction.py  types.py  unpacking.py
tests/: test_functions.py
