[tool.poetry]
name = "funcs"
version = "0.9.0"
description = "Functional programming in Python."
authors = ["nekitdev"]
license = "MIT"

readme = "README.md"

homepage = "https://github.com/nekitdev/funcs"
repository = "https://github.com/nekitdev/funcs"
documentation = "https://nekitdev.github.io/funcs"

keywords = ["python", "function", "functional", "paradigm"]

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Topic :: Utilities",
    "Typing :: Typed",
]

[tool.poetry.urls]
Chat = "https://nekit.dev/chat"
Funding = "https://nekit.dev/funding"
Issues = "https://github.com/nekitdev/funcs/issues"

[[tool.poetry.packages]]
include = "funcs"

[tool.poetry.dependencies]
python = ">= 3.8"

typing-aliases = "^1.7.0"
typing-extensions = "^4.9.0"

solus = "^1.1.0"

[tool.poetry.group.format.dependencies]
ruff = "0.2.2"

[tool.poetry.group.check.dependencies]
mypy = "1.8.0"

[tool.poetry.group.check.dependencies.pre-commit]
version = "3.6.2"
python = ">= 3.9"

[tool.poetry.group.test.dependencies]
coverage = "7.4.3"
pytest = "8.0.1"
pytest-cov = "4.1.0"
hypothesis = "6.98.11"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mkdocs = "1.5.3"
mkdocs-material = "9.5.11"

[tool.poetry.group.docs.dependencies.mkdocstrings]
version = "0.24.0"
extras = ["python"]

[tool.poetry.group.release]
optional = true

[tool.poetry.group.release.dependencies]
changelogging = "1.3.0"

[tool.ruff]
line-length = 100

[tool.pytest.ini_options]
addopts = "--cov funcs"
testpaths = ["tests"]

[tool.coverage.run]
source = ["funcs"]

[tool.coverage.report]
ignore_errors = true
exclude_lines = [
    "pragma: never",
    "pragma: no cover",
    "if TYPE_CHECKING",
    "@overload",
    "@required",
    "raise NotImplementedError",
    "raise AssertionError",
    "def __repr__",
]

[tool.coverage.html]
directory = "coverage"

[tool.mypy]
strict = true

[tool.changelogging]
name = "funcs"
version = "0.9.0"
url = "https://github.com/nekitdev/funcs"
directory = "changes"
output = "CHANGELOG.md"

start_string = "<!-- changelogging: start -->"

title_format = "{version} ({date})"
issue_format = "[#{issue}]({url}/pull/{issue})"

bullet = "-"
wrap = true
wrap_size = 100

display = ["feature", "change", "fix", "security", "deprecation", "removal", "internal"]

[build-system]
requires = ["poetry-core >= 1.9.0"]
build-backend = "poetry.core.masonry.api"
